--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@ body {
 
 @layer base {
   h1{
-    @apply font-extrabold text-2xl mb-3 font-crocante
+    @apply font-extrabold text-2xl mb-3 font-orangefont
   }
 }
 
