added paragraph font, edited services to generic writing instead of lorem ipsum

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,8 +23,11 @@ body {
 
 
 @layer base {
+  p{
+    @apply font-citrine
+  };
   h1{
-    @apply font-extrabold text-2xl mb-3 font-orangefont
+    @apply text-5xl mb-3 font-orange
   }
 }
 
