--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@ body {
   background: rgb(var(--background-rgb));
   color: rgb(var(--foreground-rgb));
   overscroll-behavior-y: none;
-  background: #ffb6c1;
+  background: #932CE6;
 }
 
 
