prevent overscroll on x and y axis

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,12 +14,17 @@
   }
 }
 
+html{
+  overflow: hidden;
+}
+
 body {
   background: rgb(var(--background-rgb));
   color: rgb(var(--foreground-rgb));
   overscroll-behavior-y: none;
   background: #111;
   pointer-events: none;
+  overflow: hidden;
 }
 
 
